--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 <div class="post">
-    <h1>Tag: {{ page.tag }}</h1>
+    <h1>Tag: {{ tag }}</h1>
     <ul>
-        {% for post in site.tags[page.tag] %}
+        {% for post in site.tags[tag] %}
         <li><a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }})<br>
             {{ post.description }}
         </li>
