--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,10 @@
 layout: default
 ---
 
-<header>
+<div class="post">
     <h1 class="post-title">{{ page.title }}</h1>
-</header>
-<div class="content">
-    {% include post-meta.html post=page %}
-
-    <div class="post-body">
-        {{ content }}
-        {% include post-tags.html post=page %}
-    </div>
+    <span class="post-date">{{ page.date | date_to_string }}</span>
+    {% include post_tags.html %}
+    <br/>
+    {{ content }}
 </div>
